ip6tables.up.rules
#
# nat
#
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
#
# security
#
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [17:1752]
COMMIT
#
# raw
#
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [13:1320]
-A PREROUTING -m rpfilter -j ACCEPT
-A PREROUTING -j DROP
COMMIT
#
# mangle
#
*mangle
:PREROUTING ACCEPT [30:2768]
:INPUT ACCEPT [30:2768]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [17:1752]
:POSTROUTING ACCEPT [17:1752]
COMMIT
#
# filter
#
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [17:1752]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p ipv6-icmp -m icmp6 --icmpv6-type 128 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -j REJECT --reject-with icmp6-port-unreachable
-A INPUT -s fe80::/10 -p ipv6-icmp -j ACCEPT
-A TCP -m state --state NEW -p tcp --dport 443 -j ACCEPT
-A TCP -m state --state NEW -p tcp --dport 80 -j ACCEPT
COMMIT
