iptables.up.rules
#
# security
#
*security
:INPUT ACCEPT [160897:21894696]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [166873:28854375]
COMMIT
#
# raw
#
*raw
:PREROUTING ACCEPT [167111:22230981]
:OUTPUT ACCEPT [166873:28854375]
COMMIT
#
# nat
#
*nat
:PREROUTING ACCEPT [15697:927954]
:INPUT ACCEPT [11600:691892]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [3804:152160]
COMMIT
#
# mangle
#
*mangle
:PREROUTING ACCEPT [167111:22230981]
:INPUT ACCEPT [167111:22230981]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [166873:28854375]
:POSTROUTING ACCEPT [166873:28854375]
COMMIT
#
# filter
#
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
:PORT-KNOCK - [0:0]
:FIRST-SSH-PORT-KNOCK-DONE - [0:0]
:SECOND-SSH-PORT-KNOCK-DONE - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -j PORT-KNOCK
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
#------------------
# TCP
#------------------
-A TCP -m state --state NEW -p tcp --dport 443 -j ACCEPT
-A TCP -m state --state NEW -p tcp --dport 80 -j ACCEPT
#------------------
# Port Knocking
#------------------
-A PORT-KNOCK -p icmp --icmp-type any -j ACCEPT
-A PORT-KNOCK -m state --state ESTABLISHED,RELATED -j ACCEPT
-A PORT-KNOCK -m state --state NEW -m tcp -p tcp --dport 22 -m recent --rcheck --seconds 30 --name SSH2 -j ACCEPT
-A PORT-KNOCK -m state --state NEW -m tcp -p tcp -m recent --name SSH2 --remove -j DROP
-A PORT-KNOCK -m state --state NEW -m tcp -p tcp --dport 1025 -m recent --rcheck --name SSH1 -j SECOND-SSH-PORT-KNOCK-DONE
-A PORT-KNOCK -m state --state NEW -m tcp -p tcp -m recent --name SSH1 --remove -j DROP
-A PORT-KNOCK -m state --state NEW -m tcp -p tcp --dport 1024 -m recent --rcheck --name SSH0 -j FIRST-SSH-PORT-KNOCK-DONE
-A PORT-KNOCK -m state --state NEW -m tcp -p tcp -m recent --name SSH0 --remove -j DROP
-A PORT-KNOCK -m state --state NEW -m tcp -p tcp --dport 1023 -m recent --name SSH0 --set -j DROP
-A FIRST-SSH-PORT-KNOCK-DONE -m recent --name SSH1 --set -j DROP
-A SECOND-SSH-PORT-KNOCK-DONE -m recent --name SSH2 --set -j DROP 
-A PORT-KNOCK -j DROP
COMMIT
